--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <input type="checkbox" id="toggle">
     <aside>
       <h2>Information</h2>
-
+      <p>Record and download audio files using record API</p>
+  
 <!--       <p>Audio recorder using web API <a href="https://developer.mozilla.org/en-US/docs/Web/API/Navigator.getUserMedia">getUserMedia</a> and the <a href="https://developer.mozilla.org/en-US/docs/Web/API/MediaRecorder_API">MediaRecorder API</a>, which provides an easier way to capture Media streams.</p>
 
       <p>Icon courtesy of <a href="http://findicons.com/search/microphone">Find Icons</a>. Thanks to <a href="http://soledadpenades.com/">Sole</a> for the Oscilloscope code!</p> -->
