--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Audio recorder api</title>
+    <title>Recorder API</title>
     <link href="styles/app.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -11,7 +11,7 @@
     <div class="wrapper">
 
       <header>
-        <h1>Web dictaphone</h1>
+        <h1> Audio recorder API</h1>
       </header>
 
       <section class="main-controls">
