--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
     </div>
 
+   <p>Go to:  <a href="http://43.4.5.178:9032/apps/runxgb.ipynb">detector app</a> </p>
+
+    
     <label for="toggle">❔</label>
     <input type="checkbox" id="toggle">
     <aside>
