--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
    
   <div class="shadowbox">
       <section class="main-controls">
-        <canvas class="visualizer" height="60px"></canvas>
+        <canvas class="visualizer" height="130px"></canvas>
         <div id="buttons">
           <button class="record">Record</button>
           <button class="stop">Stop</button>
         </div>
       </section>
 
+    <h3> <br> <br> Recorded audio samples <br></h3>
+    
       <section class="sound-clips">
 
 
